@@ -22,7 +22,6 @@ import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.data.Struct;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -53,7 +52,7 @@ public class SingleFieldPath {
         this.version = version;
         switch (version) {
             case V1: // backward compatibility
-                this.steps = Collections.singletonList(pathText);
+                this.steps = List.of(pathText);
                 break;
             case V2:
                 this.steps = buildFieldPathV2(pathText);
@@ -134,7 +133,7 @@ public class SingleFieldPath {
         // add last step if last char is a dot
         if (!path.isEmpty() && path.charAt(path.length() - 1) == DOT)
             steps.add("");
-        return Collections.unmodifiableList(steps);
+        return List.copyOf(steps);
     }
 
     private static void failWhenIncompleteBacktickPair(String path, int backtickAt) {
