@@ -24,8 +24,8 @@ import org.apache.kafka.trogdor.task.TaskWorker;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 
 /**
  * The specification for a benchmark that creates sustained connections.
@@ -187,7 +187,7 @@ public final class SustainedConnectionSpec extends TaskSpec {
     }
 
     public TaskController newController(String id) {
-        return topology -> Collections.singleton(clientNode);
+        return topology -> Set.of(clientNode);
     }
 
     @Override
